building ran split develop 2023.w45
Signed-off-by: lionelgo <29477918+lionelgo@users.noreply.github.com>

--- a/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
@@ -3,8 +3,8 @@ kubernetesType: Openshift  #Vanilla for community kubernetes distribution else O
 ## In case of using these charts on Openshift then please use UBI images
 ## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
 nfimage:   # image name either locally present or in a public/private repository
-  repository: oai-cuup 
-  version: e1ncuup # image tag or develop
+  repository: oai-cu-up 
+  version: 2023.w45 # image tag or develop
   # pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
