--- a/charts/oai-5g-ran/oai-gnb-cu-up/templates/configmap.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/templates/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Chart.Name }}-configmap
 data:
   gnb.conf: |
-      Active_gNBs = ( "oai-cu-up");
+      Active_gNBs = ( "gNB-OAI");
       # Asn1_verbosity, choice in: none, info, annoying
       Asn1_verbosity = "none";
       sa = 1;
@@ -16,7 +16,7 @@ data:
 
       #     cell_type =  "CELL_MACRO_GNB";
 
-          gNB_name  =  "oai-cu-up";
+          gNB_name  =  "gNB-OAI";
 
           // Tracking area code, 0x0000 and 0xfffe are reserved values
           tracking_area_code  =  1;
@@ -63,32 +63,16 @@ data:
           };
         }
       );
-
-      security = {
-        # preferred ciphering algorithms
-        # the first one of the list that an UE supports in chosen
-        # valid values: nea0, nea1, nea2, nea3
-        ciphering_algorithms = ( "nea0" );
-
-        # preferred integrity algorithms
-        # the first one of the list that an UE supports in chosen
-        # valid values: nia0, nia1, nia2, nia3
-        integrity_algorithms = ( "nia2", "nia0" );
-
-        # setting 'drb_ciphering' to "no" disables ciphering for DRBs, no matter
-        # what 'ciphering_algorithms' configures; same thing for 'drb_integrity'
-        drb_ciphering = "yes";
-        drb_integrity = "no";
+      
+      log_config :
+      {
+        global_log_level                      ="info";
+        hw_log_level                          ="info";
+        phy_log_level                         ="info";
+        mac_log_level                         ="info";
+        rlc_log_level                         ="debug";
+        pdcp_log_level                        ="info";
+        rrc_log_level                         ="info";
+        f1ap_log_level                         ="info";
+        ngap_log_level                         ="debug";
       };
-           log_config :
-           {
-             global_log_level                      ="info";
-             hw_log_level                          ="info";
-             phy_log_level                         ="info";
-             mac_log_level                         ="info";
-             rlc_log_level                         ="debug";
-             pdcp_log_level                        ="info";
-             rrc_log_level                         ="info";
-             f1ap_log_level                         ="info";
-             ngap_log_level                         ="debug";
-          };
