--- a/charts/oai-5g-ran/oai-gnb-du/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/values.yaml
@@ -108,7 +108,7 @@ resources:
   define: false
   limits:
     nf:
-      cpu: 2000m
+      cpu: 2500m
       memory: 2Gi
     #If tcpdump container is disabled this value will not be used
     tcpdump:
@@ -116,7 +116,7 @@ resources:
       memory: 128Mi
   requests:
     nf:
-      cpu: 2000m
+      cpu: 2500m
       memory: 2Gi
     #If tcpdump container is disabled this value will not be used
     tcpdump:
@@ -129,6 +129,8 @@ affinity: {}
 
 terminationGracePeriodSeconds: 5
 
-nodeSelector: {}
+nodeSelector: {
+  worker: telco
+}
 
 nodeName: 
