--- a/charts/oai-5g-ran/oai-nr-ue/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-nr-ue/templates/deployment.yaml
@@ -36,6 +36,10 @@ spec:
       containers:
       - name: nr-ue
         image: "{{ .Values.nfimage.repository }}:{{ .Values.nfimage.version }}"
+        volumeMounts:
+          - mountPath: /opt/oai-nr-ue/etc/nr-ue.conf
+            name: configuration
+            subPath: nr-ue.conf
         {{- if .Values.resources.define}}
         resources:
           requests:
@@ -59,41 +63,6 @@ spec:
               configMapKeyRef:
                 name: {{ .Chart.Name }}-configmap
                 key: timeZone
-          - name: RFSIMULATOR
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: rfSimulator
-          - name: FULL_IMSI
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: fullImsi
-          - name: FULL_KEY
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: fullKey
-          - name: OPC
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: opc
-          - name: DNN
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: dnn
-          - name: NSSAI_SST
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: nssaiSst
-          - name: NSSAI_SD
-            valueFrom:
-              configMapKeyRef:
-                name: {{ .Chart.Name }}-configmap
-                key: nssaiSd
           - name: USE_ADDITIONAL_OPTIONS
             valueFrom:
               configMapKeyRef:
@@ -130,6 +99,10 @@ spec:
           - infinity
         {{- end}}
       {{- end }}
+      volumes:
+      - configMap:
+          name: {{ .Chart.Name }}-fileconf-configmap
+        name: configuration      
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       serviceAccountName: {{ .Values.serviceAccount.name }}
