--- a/openshift/oai-nr-ue-build-config.yaml
+++ b/openshift/oai-nr-ue-build-config.yaml
@@ -49,17 +49,18 @@ spec:
         RUN cp /oai-ran/docker/scripts/nr_ue_entrypoint.sh /oai-ran/docker/scripts/entrypoint.sh
 
         #start from scratch for target executable
-        FROM registry.access.redhat.com/ubi8/ubi:latest as oai-nr-ue
+        FROM registry.access.redhat.com/ubi9/ubi:latest as oai-nr-ue
         ENV TZ=Europe/Paris
 
         RUN yum update -y && \
-            yum install -y --enablerepo="ubi-8-codeready-builder" \
+            yum install -y --enablerepo="ubi-9-codeready-builder" \
                 lksctp-tools \
                 procps-ng \
                 tzdata \
                 net-tools \
                 iputils \
                 iproute \
+                openssl \
                 atlas \
                 gdb \
                 python3 \
