--- a/charts/oai-5g-core/oai-amf/values.yaml
+++ b/charts/oai-5g-core/oai-amf/values.yaml
@@ -40,7 +40,7 @@ multus:
   ## If you don't want to add a default route in your pod then leave this field empty
   defaultGateway: "172.21.7.254"
   n2Interface:
-    create: false
+    create: true
     Ipadd: "172.21.6.94"
     Netmask: "22"
     ## If you do not have a gateway leave the field empty
