--- a/charts/oai-5g-core/oai-upf/values.yaml
+++ b/charts/oai-5g-core/oai-upf/values.yaml
@@ -37,15 +37,16 @@ multus:
   ## If you don't want to add a default route in your pod then leave this field empty
   defaultGateway: ""
   n3Interface:
-    create: false
-    Ipadd: "172.21.12.95"
+    create: true
+    #Ipadd: "172.21.12.95"
+    Ipadd: "192.168.25.3"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "n3"
     ## If you do not have a gateway leave the field empty
     Gateway: ""
     ## If you do not want to add any routes in your pod then leave this field empty
-    routes: [{'dst': '10.8.0.0/24','gw': '172.21.15.254'}, {'dst': '10.9.0.0/24','gw': '172.21.15.254'}]
+    #routes: [{'dst': '10.8.0.0/24','gw': '172.21.15.254'}, {'dst': '10.9.0.0/24','gw': '172.21.15.254'}]
     hostInterface: "bond0"
   n4Interface:
     create: false
