typo name project, ran ip addresses update
Signed-off-by: lionelgo <29477918+lionelgo@users.noreply.github.com>

--- a/charts/oai-5g-ran/oai-gnb-cu-cp/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-cp/values.yaml
@@ -30,7 +30,7 @@ multus:
   defaultGateway: ""
   e1Interface:
     create: true
-    IPadd: "192.168.18.12"
+    IPadd: "192.168.18.22"
     Netmask: "24"
     # #name inside the pod is hardcoded right now
     # name: "e1"
@@ -40,7 +40,7 @@ multus:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n2Interface:
     create: true
-    IPadd: "172.21.6.98"
+    IPadd: "172.21.6.208"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "n2"
@@ -50,7 +50,7 @@ multus:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   f1cInterface:
     create: true
-    IPadd: "192.168.20.12"
+    IPadd: "192.168.20.22"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "f1c"
@@ -69,10 +69,10 @@ config:
   mncLength: "2" # check the information with AMF, SMF, UPF/SPGWU
   tac: "1"     # check the information with AMF
   snssaiList: "({ sst = 1, sd = 0xffffff })"
-  amfIpAddress: "172.21.6.185"  # amf ip-address
-  e1IpAddress: "192.168.18.13"  ## CU-UP ip-address 
+  amfIpAddress: "172.21.6.206"  # amf ip-address
+  e1IpAddress: "192.168.18.23"  ## CU-UP ip-address 
   #Normally you don't have to set this but at the moment it is required
-  f1duIpAddress: "192.168.20.13"
+  f1duIpAddress: "192.168.20.23"
  
 # Debugging section
 podSecurityContext:
@@ -122,8 +122,7 @@ affinity: {}
 
 terminationGracePeriodSeconds: 5
 
-nodeSelector: {
+nodeSelector: 
   worker: telco
-}
 
 nodeName: 
