--- a/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
@@ -29,7 +29,7 @@ multus:
   defaultGateway: ""
   e1Interface:
     create: true
-    IPadd: "192.168.18.13"
+    IPadd: "192.168.18.23"
     Netmask: "24"
     # #name inside the pod is hardcoded right now
     # name: "e1"
@@ -39,7 +39,7 @@ multus:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n3Interface:
     create: true
-    IPadd: "192.168.25.4"
+    IPadd: "192.168.25.24"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "n3"
@@ -49,7 +49,7 @@ multus:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   f1uInterface:
     create: true
-    IPadd: "192.168.20.14"
+    IPadd: "192.168.20.24"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "f1u"
@@ -69,9 +69,9 @@ config:
   tac: "1"     # check the information with AMF
   nssaiSst: "1"  #currently only 4 standard values are allowed 1,2,3,4 
   nssaiSd: "0xffffff"    #values in hexa-decimal format
-  e1IpAddress: "192.168.18.12"
+  e1IpAddress: "192.168.18.22"
   ## Its the DU which communicates with the CU so no need for DU ip-address
-  f1duIpAddress: "192.168.20.13"
+  f1duIpAddress: "192.168.20.23"
 
 ## Debugging section
 podSecurityContext:
@@ -120,8 +120,7 @@ affinity: {}
 
 terminationGracePeriodSeconds: 5
 
-nodeSelector: {
+nodeSelector:
   worker: telco
-}
 
 nodeName: 
