let's assume this is deployment v0
Signed-off-by: lionelgo <29477918+lionelgo@users.noreply.github.com>

--- a/charts/oai-5g-core/oai-5g-basic/config.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/config.yaml
@@ -29,7 +29,7 @@ nfs:
       api_version: v1
       interface_name: eth0
     n2:
-      interface_name: eth0
+      interface_name: n2
       port: 38412
   smf:
     host: oai-smf
