--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -83,7 +83,7 @@ oai-amf:
     ## If you don't want to add a default route in your pod then replace this field with ""
     defaultGateway: ""
     n2Interface:
-      create: false
+      create: true
       Ipadd: "172.21.6.206"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
@@ -93,9 +93,8 @@ oai-amf:
       ## If you do not want to add any routes in your pod then leave this field empty
       routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}]
       hostInterface: "bond0" # Interface of the host machine on which this pod will be scheduled
-  nodeSelector: {
+  nodeSelector: 
     worker: telco    
-  }
 oai-upf:
   enabled: true
   kubernetesType: Openshift #Openshift/Vanilla Vanilla for Upstream Kubernetes
