--- a/openshift/oai-ran-builder-build-config.yaml
+++ b/openshift/oai-ran-builder-build-config.yaml
@@ -55,7 +55,7 @@ spec:
             dockerfilePath: "docker/Dockerfile.build.rhel9"
             from:
                kind: ImageStreamTag          
-               namespace: beyond5g-ercn
+               namespace: beyond5g-tsp
                name: oai-ran-base:2023.w45        
     output:
         to:
