--- a/charts/oai-5g-core/oai-upf/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-upf/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
   template:
     metadata:
       labels:
+        app: oai-upf
         {{- include "oai-upf.selectorLabels" . | nindent 8 }}
     {{- if .Values.multus.n3Interface.create }}
       annotations:
