--- a/charts/oai-5g-ran/oai-gnb-du/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/templates/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ .Chart.Name }}
   labels:
     {{- include "oai-gnb-du.labels" . | nindent 4 }}
+    duUeAffinity: ""
+
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
