--- a/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
@@ -38,7 +38,7 @@ multus:
     #routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n3Interface:
-    create: true
+    create: false
     IPadd: "192.168.25.24"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
