--- a/charts/oai-5g-ran/oai-gnb-du/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/values.yaml
@@ -91,7 +91,7 @@ start:
   gnbdu: true #If false the network function container will run in sleep mode for manually testing
   tcpdump: false
 
-includeTcpDumpContainer: true #If true it will add a tcpdump container inside network function pod for debugging
+includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
 ## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
