--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -76,7 +76,7 @@ oai-amf:
     version: develop                                    ## The branch to be used to pull from dockerhub
     # pullPolicy: IfNotPresent or Never or Always
     pullPolicy: IfNotPresent
-  includeTcpDumpContainer: true #only for taking pcaps inside network function pod
+  includeTcpDumpContainer: false #only for taking pcaps inside network function pod
   imagePullSecrets:
     - name: "regcred"
   multus:
@@ -104,8 +104,8 @@ oai-upf:
     # pullPolicy: IfNotPresent or Never or Always
     pullPolicy: IfNotPresent
   start:
-    tcpdump: true    
-  includeTcpDumpContainer: true #only for taking pcaps inside network function pod
+    tcpdump: false    
+  includeTcpDumpContainer: false #only for taking pcaps inside network function pod
   imagePullSecrets:
     - name: "regcred"
   # create an extra interface for N3 incase the gNB is outside the cluster network or there is a need to have dedicated interface for N3
@@ -115,15 +115,15 @@ oai-upf:
     ## If you don't want to add a default route in your pod then replace this field with ""
     defaultGateway: ""
     n3Interface:
-      create: false
+      create: true
       Ipadd: "192.168.25.3"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
-      # name: "n3"
+      name: "n3"
       ## If you do not have a gateway leave the field empty
       Gateway: ""
       ## If you don't want to add a default route in your pod then replace this field with ""
-      routes: [{'dst': '10.8.0.0/24','gw': '172.21.11.254'}, {'dst': '10.9.0.0/24','gw': '172.21.11.254'}]
+      #routes: [{'dst': '10.8.0.0/24','gw': '172.21.11.254'}, {'dst': '10.9.0.0/24','gw': '172.21.11.254'}]
       hostInterface: "bond0"
     ## For n4 it is better to re-use eth0 interface inside the pod (primary CNI of Kubernetes)
     n4Interface:
