--- a/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
@@ -38,7 +38,7 @@ multus:
     #routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n3Interface:
-    create: false
+    create: true
     IPadd: "192.168.25.24"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
@@ -80,9 +80,9 @@ podSecurityContext:
 
 start:
   gnbcuup: true #If false the network function container will run in sleep mode for manually testing
-  tcpdump: true
+  tcpdump: false
 
-includeTcpDumpContainer: true #If true it will add a tcpdump container inside network function pod for debugging
+includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
 ## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
