--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -84,14 +84,14 @@ oai-amf:
     defaultGateway: ""
     n2Interface:
       create: false
-      Ipadd: "172.21.6.94"
+      Ipadd: "172.30.110.171"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
       # name: "n2"
       ## If you do not have a gateway leave the field empty
       Gateway:
       ## If you do not want to add any routes in your pod then leave this field empty
-      routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}]
+      routes: ""
       hostInterface: "bond0" # Interface of the host machine on which this pod will be scheduled
   config:
     amfInterfaceNameForNGAP: "eth0" # If oai-amf.multus.n2Interface.create is true then n2 else eth0
@@ -134,14 +134,14 @@ oai-spgwu-tiny:
     defaultGateway: ""
     n3Interface:
       create: false
-      Ipadd: "172.21.8.95"
+      Ipadd: "172.30.110.171"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
       # name: "n3"
       ## If you do not have a gateway leave the field empty
       Gateway: ""
       ## If you don't want to add a default route in your pod then replace this field with ""
-      routes: [{'dst': '10.8.0.0/24','gw': '172.21.11.254'}, {'dst': '10.9.0.0/24','gw': '172.21.11.254'}]
+      routes: ""
       hostInterface: "bond0"
     ## For n4 it is better to re-use eth0 interface inside the pod (primary CNI of Kubernetes)
     n4Interface:
